--- a/fyp/views/index.pug
+++ b/fyp/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   #app-container
-  script(type="text/javascript", src="https://cdn.socket.io/socket.io-1.4.5.js")
-  script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+  script(type="text/javascript", src="/javascripts/lib/socket.io.min.js")
+  script(type="text/javascript", src="/javascripts/lib/jquery.min.js")
   script(type="text/javascript", src="/javascripts/index.js")
   script(type="text/javascript", src="/dist/bundle.js")
