--- a/fyp/views/layout.pug
+++ b/fyp/views/layout.pug
@@ -6,6 +6,6 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/c3.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
   body
     block content
